[gd_scene load_steps=4 format=3 uid="uid://dwbdyededoeqs"]

[ext_resource type="PackedScene" uid="uid://dbt8fjrt4x517" path="res://Scenes/RequestsWindow/RequestPerformer.tscn" id="1_4a2ix"]
[ext_resource type="Script" path="res://Scenes/RequestsWindow/Categories/Warehouse.gd" id="1_sne6t"]
[ext_resource type="PackedScene" uid="uid://bbg7ekkyl0jg8" path="res://src/texture_rect.tscn" id="2_8vdql"]

[node name="Warehouse" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sne6t")

[node name="TextureRect" parent="." instance=ExtResource("2_8vdql")]
layout_mode = 0

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 704.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 50

[node name="GET" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/GET"]
layout_mode = 0
offset_right = 576.0
offset_bottom = 643.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/GET/ScrollContainer"]
layout_mode = 2

[node name="All products" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "All products"

[node name="Product by id" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Product by id"

[node name="Products in stock" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Products in stock"

[node name="Quantity of products" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Quantity of products"

[node name="Quantity of product" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Quantity of product"

[node name="Average amount of all products" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Average amount of all products"

[node name="By name" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "By name"

[node name="By price from" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "By price from"

[node name="By price up to" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "By price up to"

[node name="Sales by product id" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Sales by product id"

[node name="Product id" type="LineEdit" parent="TabContainer/GET"]
layout_mode = 0
offset_left = 536.0
offset_top = 3.0
offset_right = 664.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 32
placeholder_text = "id:"
expand_to_text_length = true

[node name="Name" type="LineEdit" parent="TabContainer/GET"]
layout_mode = 0
offset_left = 536.0
offset_top = 59.0
offset_right = 671.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 32
placeholder_text = "name:"
expand_to_text_length = true

[node name="Price" type="LineEdit" parent="TabContainer/GET"]
layout_mode = 0
offset_left = 536.0
offset_top = 115.0
offset_right = 664.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 32
placeholder_text = "price:"
expand_to_text_length = true

[node name="POST" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/POST"]
layout_mode = 0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/POST/ScrollContainer"]
layout_mode = 2

[node name="Add product" type="Button" parent="TabContainer/POST/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add product"

[node name="Add repurchased product" type="Button" parent="TabContainer/POST/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add repurchased product"

[node name="Name" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 512.0
offset_top = 80.0
offset_right = 579.063
offset_bottom = 111.0
theme_override_font_sizes/font_size = 32
placeholder_text = "name:"
expand_to_text_length = true

[node name="Quantity" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 512.0
offset_top = 144.0
offset_right = 640.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 32
placeholder_text = "quantity:"
expand_to_text_length = true

[node name="Amount" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 512.0
offset_top = 200.0
offset_right = 640.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 32
placeholder_text = "amount:"
expand_to_text_length = true

[node name="Margin" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 512.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 32
placeholder_text = "margin %:"
expand_to_text_length = true

[node name="PUT" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/PUT"]
layout_mode = 0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PUT/ScrollContainer"]
layout_mode = 2

[node name="Update product" type="Button" parent="TabContainer/PUT/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Update product"

[node name="Product id" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 448.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 32
placeholder_text = "product id:"
expand_to_text_length = true

[node name="Name" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 448.0
offset_top = 128.0
offset_right = 583.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 32
placeholder_text = "name:"
expand_to_text_length = true

[node name="Quantity" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 448.0
offset_top = 184.0
offset_right = 626.0
offset_bottom = 237.0
theme_override_font_sizes/font_size = 32
placeholder_text = "quantity:"
expand_to_text_length = true

[node name="Amount" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 448.0
offset_top = 240.0
offset_right = 609.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 32
placeholder_text = "amount"
expand_to_text_length = true

[node name="DELETE" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/DELETE"]
layout_mode = 0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/DELETE/ScrollContainer"]
layout_mode = 2

[node name="Delete product" type="Button" parent="TabContainer/DELETE/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Delete product"

[node name="Product id" type="LineEdit" parent="TabContainer/DELETE"]
layout_mode = 0
offset_left = 456.0
offset_top = 80.0
offset_right = 663.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 32
placeholder_text = "product id:"
expand_to_text_length = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 704.0
offset_right = 1280.0
offset_bottom = 720.0
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 0.0784314)
selection_enabled = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1208.0
offset_top = 616.0
offset_right = 1216.0
offset_bottom = 624.0
theme_override_font_sizes/font_size = 64
text = "<"

[node name="Request" parent="." instance=ExtResource("1_4a2ix")]

[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/All products" to="." method="_on_all_products_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Product by id" to="." method="_on_product_by_id_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Products in stock" to="." method="_on_products_in_stock_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Quantity of products" to="." method="_on_quantity_of_products_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Quantity of product" to="." method="_on_quantity_of_product_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Average amount of all products" to="." method="_on_average_amount_of_all_products_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/By name" to="." method="_on_by_name_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/By price from" to="." method="_on_by_price_from_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/By price up to" to="." method="_on_by_price_up_to_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Sales by product id" to="." method="_on_sales_by_product_id_button_up"]
[connection signal="button_up" from="TabContainer/POST/ScrollContainer/VBoxContainer/Add product" to="." method="_on_add_product_button_up"]
[connection signal="button_up" from="TabContainer/POST/ScrollContainer/VBoxContainer/Add repurchased product" to="." method="_on_add_repurchased_product_button_up"]
[connection signal="button_up" from="TabContainer/PUT/ScrollContainer/VBoxContainer/Update product" to="." method="_on_update_product_button_up"]
[connection signal="button_up" from="TabContainer/DELETE/ScrollContainer/VBoxContainer/Delete product" to="." method="_on_delete_product_button_up"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
[connection signal="response_ready" from="Request" to="." method="_on_request_response_ready"]
